--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+out
+wally.toml
+datatree.yaml
+foreman.toml
+default.project.json
+Packages
+sourcemap.json
