--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
         os: [windows-latest] # ubuntu-latest, macOS-latest]
         include:
           - os: windows-latest
-            exe_name: data-tree.exe
+            exe_name: datatree.exe
             asset_content_type: application/octet-stream
-            build_command: pyinstaller --onefile src/__init__.py -n data-tree
+            build_command: pyinstaller --onefile src/__init__.py -n datatree
             zip_suffix: -win64
 
     runs-on: ${{ matrix.os }}
@@ -54,8 +54,8 @@ jobs:
       - name: Create ZIP archive and rename executable
         run: |
           mkdir dist-zip
-          cp dist/${{ matrix.exe_name }} dist/data-tree${{ matrix.zip_suffix }}
-          7z a dist-zip/data-tree${{ matrix.zip_suffix }}.zip dist/data-tree${{ matrix.zip_suffix }}
+          cp dist/${{ matrix.exe_name }} dist/datatree${{ matrix.zip_suffix }}
+          7z a dist-zip/datatree${{ matrix.zip_suffix }}.zip dist/datatree${{ matrix.zip_suffix }}
 
       - name: Upload zip file to Release
         uses: actions/upload-release-asset@v1
@@ -63,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: dist-zip/data-tree${{ matrix.zip_suffix }}.zip
-          asset_name: data-tree${{ matrix.zip_suffix }}.zip
+          asset_path: dist-zip/datatree${{ matrix.zip_suffix }}.zip
+          asset_name: datatree${{ matrix.zip_suffix }}.zip
           asset_content_type: ${{ matrix.asset_content_type }}
