--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.17.3
+certifi==2022.12.7
+charset-normalizer==3.1.0
 dpath==2.1.5
-luau==0.3.7
+idna==3.4
+luau==0.4.0
 mypy==1.2.0
 mypy-extensions==1.0.0
 pefile==2023.2.7
@@ -9,7 +12,9 @@ pyinstaller==5.10.1
 pyinstaller-hooks-contrib==2023.2
 pywin32-ctypes==0.2.0
 PyYAML==6.0
+requests==2.28.2
 toml==0.10.2
 tomli==2.0.1
 types-toml==0.10.8.6
 typing_extensions==4.5.0
+urllib3==1.26.15
