--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 dpath==2.1.5
 idna==3.4
-luau==0.4.0
+luau==0.4.17
 mypy==1.2.0
 mypy-extensions==1.0.0
 pefile==2023.2.7
@@ -15,6 +15,8 @@ PyYAML==6.0
 requests==2.28.2
 toml==0.10.2
 tomli==2.0.1
+types-PyYAML==6.0.12.9
+types-setuptools==67.7.0.0
 types-toml==0.10.8.6
 typing_extensions==4.5.0
 urllib3==1.26.15
